# HW6_Dual-AI-Agent-Cop-Thief-Chase-via-MCP-Servers

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  FIXES.md  HOW_TO_USE_AND_CHALLENGE.md  LICENSE  README.md  docker-compose.cloud.yml  pyproject.toml  system prompt.txt
.github/workflows/: ci.yml
assets/: .gitkeep  gui_phase6_board.ps
config/: config.cloud.yaml  config.yaml
deploy/: render.yaml
deploy/vps/: docker-compose.yml  env.example  fix-server.sh
docs/: DEPLOYMENT.md  FINAL_AUDIT.md  PLAN.md  PRD.md  PRD_game_engine.md  PRD_nl_protocol.md  TODO.md
scripts/: start-local.ps1  verify-cloud.ps1
src/cop_thief/: __init__.py  constants.py
src/cop_thief/cli/: __init__.py  main.py  verify_cloud.py
src/cop_thief/gui/: __init__.py  _capture.py  _shell.py  _transcript_panel.py  app.py  drawing.py  view_model.py
src/cop_thief/mcp_servers/: __init__.py  _state.py  _state_backend.py  _tools_impl.py  cop_server.py  runtime.py  server.py  state_server.py  thief_server.py  tools.py
src/cop_thief/sdk/: __init__.py  _facade_types.py  facade.py
src/cop_thief/services/: __init__.py
src/cop_thief/shared/: __init__.py  _auth_types.py  _config_loader.py  _config_schemas.py  _gatekeeper_executor.py  _gatekeeper_types.py  _rate_limiter.py  auth.py  config.py  gatekeeper.py  logging.py  version.py
tests/: __init__.py  conftest.py
tests/integration/: _cloud_stack.py  test_cloud_deployment.py  test_full_pipeline.py  test_mcp_servers.py  test_mcp_sse_barriers.py  test_orchestrator.py  test_orchestrator_http.py  test_sdk_live_frames.py
tests/unit/: test_board_core.py  test_board_placement.py  test_config_happy.py  test_config_mcp_mode.py  test_config_validation.py  test_deployment_cloud.py  test_deployment_runtime.py  test_deployment_verify.py  test_estimator_nlp.py  test_failure_paths.py  test_gatekeeper_success_retry.py  test_gatekeeper_timeout_backpressure.py  test_gui_app.py  test_gui_drawing.py  test_gui_view_model.py  test_lifecycle.py  test_lifecycle_edge_cases.py  test_llm_client.py  test_llm_tactics.py  test_mcp_auth.py  test_mcp_client.py  test_mcp_servers_import.py  test_mcp_tools.py  test_nlp_encoder_parser.py  test_redacting_filter.py  test_report_builder.py  test_report_emailer.py  test_rules_barriers.py  test_rules_moves.py  test_rules_victory.py  test_scoring.py  test_state_backend.py  test_state_server.py  test_strategy_factory.py  test_strategy_heuristic.py  test_strategy_qlearning.py  test_thief_apf.py  test_token_store.py  test_turn_controller_barriers.py  test_turn_tracker.py  (+1 more)
(+47 files in other folders)
