[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marl-cop-thief"
version = "0.1.0"
description = "Dual AI Agent Cop-Thief Chase via MCP Servers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "fastmcp>=0.1.0",
    "httpx>=0.27",
    "anyio>=4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pre-commit>=4.0",
]

[project.scripts]
cop-thief = "cop_thief.cli.main:main"
cop-thief-gui = "cop_thief.gui.app:main"
cop-thief-mcp = "cop_thief.mcp_servers.server:main"
cop-thief-state = "cop_thief.mcp_servers.state_server:main"
cop-thief-verify-cloud = "cop_thief.cli.verify_cloud:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cop_thief"]

# ---------------------------------------------------------------------------
# Ruff — T-P0-05
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (public API docstrings)
    "D",   # pydocstyle
]
ignore = [
    "D100", "D104",        # Missing docstring in public module/package (handled by __init__.py)
    "D203", "D213",        # Conflicting docstring style rules — use D211 + D212
    "ANN401",              # Dynamically typed expressions (Any)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN"]  # Relax doc/annotation rules in tests

[tool.ruff.lint.isort]
known-first-party = ["cop_thief"]

# ---------------------------------------------------------------------------
# Pytest + coverage — T-P0-06
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live_cloud: optional live verification against deployed MCP URLs",
]
addopts = [
    "--cov=src/cop_thief",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=85",
    "-v",
]

[tool.coverage.run]
source = ["src/cop_thief"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
